tests/pos/objects/22-object.ts

/*@ readonly */
let a_unique_obj = { a: 0, b: 0};

a_unique_obj.a = 1;
a_unique_obj.b = 1;
